@@ -2,7 +2,7 @@
 # (C) Copyright 2007-2009 Michal Simek
 # Michal SIMEK <monstr@monstr.eu>
 #
-# (C) Copyright 2010 Li-Pro.Net
+# (C) Copyright 2010-2011 Li-Pro.Net
 # Stephan Linz <linz@li-pro.net>
 #
 # This program is free software; you can redistribute it and/or
@@ -288,7 +288,7 @@ define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 
 # System memory is mpmc_0
 define_hex CONFIG_XILINX_ERAM_START 0x20000000
-define_hex CONFIG_XILINX_ERAM_SIZE 0x08000000
+define_hex CONFIG_XILINX_ERAM_SIZE 0x00000000
 
 # NOR Flash memory is xps_mch_emc_0
 define_hex CONFIG_XILINX_FLASH_START 0xaf000000
