@@ -43,7 +43,7 @@
 		serial0 = &xps_uart_0;
 	} ;
 	chosen {
-		bootargs = "console=ttyUL0,115200 mtdparts=af000000.flash:2048k(bpi),13824k(simpleimage),384k(u-boot-fs)ro,128k(env) debug";
+		bootargs = "console=ttyUL0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=af000000.flash:2048k(bpi),4096k(kernel),9728k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/plb@0/serial@89ff0000";
 	} ;
 	cpus {
